--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,29 @@
+annotated-types==0.6.0
+anyio==3.7.1
 certifi==2023.11.17
-distlib==0.3.7
-filelock==3.13.1
-pipenv==2023.11.15
-platformdirs==4.0.0
-setuptools==69.0.2
-virtualenv==20.24.7
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+fastapi==0.104.1
+greenlet==3.0.1
+h11==0.14.0
+httptools==0.6.1
+idna==3.6
+iniconfig==2.0.0
+packaging==23.2
+pep8==1.7.1
+pluggy==1.3.0
+pydantic==2.5.2
+pydantic_core==2.14.5
+pytest==7.4.3
+python-dotenv==1.0.0
+PyYAML==6.0.1
+requests==2.31.0
+sniffio==1.3.0
+SQLAlchemy==2.0.23
+starlette==0.27.0
+typing_extensions==4.8.0
+urllib3==2.1.0
+uvicorn==0.24.0.post1
+watchfiles==0.21.0
+websockets==12.0
